2005-07-14  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/hikifarm/index.cgi (run): not to use Hiki::Util.redirect as
	a module function to avoid an error.

2005-07-14  Kazuhiko  <kazuhiko@fdiary.net>
	* Hiki 0.8.1 released!

	* hiki/command.rb (cmd_preview, cmd_save, cmd_admin),
	template/adminform.html, template/edit.html,
	template/i.adminform.html, template/i.edit.html: check the
	session_id in cgi queries to avoid 'Cross-Site Request Forgeries'
	vulnerabilities.

	* hiki/command.rb (cmd_admin): raise PermissionError instead of
	redirection to FrontPage.

	* template/i.edit.html: remove needless 'freeze_msg'. add a link
	to the editing form.

	* plugin/00default.rb, template/edit.html, template/i.edit.html:
	remove 'accesskey' attributes (closes #9).

	* messages/en.rb, messages/fr.rb, messages/it.rb,
	messages/ja.rb (msg_preview), template/edit.html: add a link to
	the editing form (suggested by Kouhei Sutou).

2005-07-13  Kouhei Yanagita <sugi@dream.big.or.jp>
	* test/test_repos_default.rb: add unit tests for ReposDefault.

2005-07-13  Kazuhiko  <kazuhiko@fdiary.net>
	* template/edit.html: remove needless 'freeze_msg'.
	* hiki/command.rb (cmd_edit): preserve freeze status in preview
	mode.

	* hiki/util.rb (redirect): use 'meta refresh' if @conf.use_refresh
	is set (reported by nkoz and 7743).

	* hiki/command.rb: use an absolute path in the 'redirect'
	method (reported by 7743).

	* style/default/parser.rb (heading, link, blockquote),
	style/rd+/parser.rb (heading, link, blockquote): add format
	methods (suggested by Kouhei Sutou). 
	* misc/plugin/bbs.rb (bbs_post): use 'Parser.heading'.
	* misc/plugin/trackback.rb (trackback_post): use 'Parser.link' and
	'Parser.blockquote'.

	* misc/plugin/comment.rb, misc/plugin/bbs.rb: use @user instead of
	@cgi.cookies['auth_name'][0].

	* misc/text/rd+/TextFormattingRules: revise URIs about the RD
	format.

	* plugin/00default.rb (create_menu): code cleanup.
	(creatable?): add a new method.